[project]
name = "ComputePodAsyncWatchDo"
version = "0.0.1"
description = "A simple async based tool to watch-do multiple directories/commands at once."
authors = [
    {name = "Stephen Gaito", email = "stephen@perceptisys.co.uk"},
]
dependencies = [
    "asyncinotify~=2.0",
    "pyyaml~=5.4",
    "aiofiles~=0.7",
    "aioshutil~=1.1",
    "ComputePodPythonUtils @ git+https://github.com/computePods/pythonUtils.git",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "Apache-2.0"}

[project.urls]
homepage = "https://github.com/computePods/asyncWatchDo"

[project.scripts]
cpawd = "cpawd:cpawd"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
